--- a/public/wommen.css
+++ b/public/wommen.css
@@ -1338,3 +1338,12 @@ h6,
 .m-5 {
   margin-bottom: 10px !important;
 }
+
+.elementor-heading-title {
+  padding: 0;
+  margin: 0;
+  line-height: 1;
+}
+.elementor-aspect-ratio-916 .elementor-fit-aspect-ratio {
+  overflow: hidden;
+}
